--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.s169954" >
 
+    <uses-sdk android:minSdkVersion="11"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
