--- a/S169954Mappe1-master/app/src/main/AndroidManifest.xml
+++ b/S169954Mappe1-master/app/src/main/AndroidManifest.xml
@@ -17,6 +17,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Regler"
+            android:label="@string/app_name"
+            android:parentActivityName=".Hoved">
+            <intent-filter>
+                <action android:name="com.example.s169954.Regler" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Spillet"
+            android:label="@string/app_name"
+            android:parentActivityName=".Hoved">
+            <intent-filter>
+                <action android:name="com.example.s169954.Spillet" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
