--- a/S169954Mappe1-master/app/src/main/AndroidManifest.xml
+++ b/S169954Mappe1-master/app/src/main/AndroidManifest.xml
@@ -19,12 +19,10 @@
         </activity>
         <activity
             android:name=".Regler"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"/>
         <activity
             android:name=".Spillet"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
