--- a/S169954Mappe1-master/app/src/main/AndroidManifest.xml
+++ b/S169954Mappe1-master/app/src/main/AndroidManifest.xml
@@ -19,10 +19,19 @@
         </activity>
         <activity
             android:name=".Regler"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name"
+            android:parentActivityName=".Hoved">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.s169954.Hoved"/>
+        </activity>
         <activity
             android:name=".Spillet"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name"
+            android:parentActivityName=".Hoved"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.s169954.Hoved"/>
     </application>
 
 </manifest>
