--- a/S169954Mappe1-master/app/src/main/AndroidManifest.xml
+++ b/S169954Mappe1-master/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:label="@string/app_name">
 
         <activity
-            android:name=".Hoved"
-            android:label="@string/app_name" >
+            android:name=".Intro"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Hoved"
+            android:label="@string/app_name">
+                <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.example.s169954.Hoved"/>
         </activity>
         <activity
             android:name=".Regler"
